# ESP32_RTOS_wifi_connect

./: .env.example  .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c
main/tasks/: http_server_task.c  http_server_task.h  tcp_command_task.c  tcp_command_task.h  tcp_server_task.c  tcp_server_task.h  wifi_event_group.h  wifi_task.c  wifi_task.h
